--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -113,9 +113,9 @@
 
 \begin{center}
     \textbf{\Huge \scshape Oways Jaffer} \\ \vspace{1pt}
-    \small 201-418-0462 $|$ \href{mailto:x@x.com}{\underline{realowaysjaffer@gmail.com}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \small 201-418-0462 $|$ \href{mailto:realowaysjaffer@gmail.com}{\underline{realowaysjaffer@gmail.com}} $|$ 
+    \href{https://linkedin.com/in/oways}{\underline{linkedin.com/in/owaysjaffer}} $|$
+    \href{https://github.com/oway5}{\underline{github.com/Oway5}}
 \end{center}
 
 
@@ -123,11 +123,9 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
-    \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
+      {Rutgers University}{New Brunswick, NJ}
+      {Bachelor of Sciences in Computer Science}{Aug. 2021 -- May 2025}
+    
   \resumeSubHeadingListEnd
 
 
