--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -134,8 +134,8 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {Software Engineer Intern}{May 2022 -- August 2022}
+      {ExterNetworks}{Piscataway, NJ}
       \resumeItemListStart
         \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
         \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
