--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -1,11 +1,10 @@
 %-------------------------
 % Resume in Latex
-% Author : Jake Gutierrez
+% Author : Oways Jaffer
 % Based off of: https://github.com/sb2nov/resume
-% License : MIT
 %------------------------
 
-\documentclass[letterpaper,11pt]{article}
+\documentclass[letterpaper,12pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -89,6 +88,12 @@
       \small#1 & #2 \\
     \end{tabular*}\vspace{-7pt}
 }
+\newcommand{\resumeSubheadingCoursework}[1]{
+  \item
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+      \textit{\small#1} \\
+    \end{tabular*}\vspace{-7pt}
+}
 
 \newcommand{\resumeSubItem}[1]{\resumeItem{#1}\vspace{-4pt}}
 
@@ -125,6 +130,13 @@
     \resumeSubheading
       {Rutgers University}{New Brunswick, NJ}
       {Bachelor of Sciences in Computer Science}{Aug. 2021 -- May 2025}
+      \resumeSubheadingCoursework
+      {Relevant Coursework: Software Methodology, Computer Architecture}
+      \resumeSubheading
+      {Dr. Ronald E. Mcnair Academic High School}{Jersey City, NJ}
+      {Relevant Coursework: AP CSA, Introduction to Web Design}{Aug. 2018 -- June 2021}
+      \resumeSubheadingCoursework
+      {GPA: 3.7}
     
   \resumeSubHeadingListEnd
 
@@ -137,9 +149,9 @@
       {Software Engineer Intern}{May 2022 -- August 2022}
       {ExterNetworks}{Piscataway, NJ}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+        \resumeItem{Used MySQL Workbench to manage given databases restructuring storage of sensitive information.}
+        \resumeItem{Enhanced multiple services using data from consumer reports.}
+        \resumeItem{Shadowed Senior Engineer and Penetration Tester learning to secure large networks.}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -152,26 +164,26 @@
 %    \resumeSubHeadingListEnd
 %-------------------------------------------
 
-    \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-    \resumeItemListEnd
+    % \resumeSubheading
+    %   {Information Technology Support Specialist}{Sep. 2018 -- Present}
+    %   {Southwestern University}{Georgetown, TX}
+    %   \resumeItemListStart
+    %     \resumeItem{Communicate with managers to set up campus computers used on campus}
+    %     \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
+    %     \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
+    % \resumeItemListEnd
 
-    \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-      \resumeItemListEnd
+    % \resumeSubheading
+    %   {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
+    %   {Southwestern University}{Georgetown, TX}
+    %   \resumeItemListStart
+    %     \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
+    %     \resumeItem{Developed a game in Java to test the generated dungeons}
+    %     \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
+    %     \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
+    %     \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
+    %     \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
+    %   \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
@@ -180,34 +192,48 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
+          {\textbf{ArchOC (Linux)} $|$ \emph{Shell, Bash, JavaScript, SvelteKit}}{Mar 2023 -- Present}
           \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
+            \resumeItem{Using SvelteKit to make a GUI}
+            \resumeItem{Enabling users to modify voltage offsets on their hardware without the need for a terminal. Hardware includes CPU and GPU for now}
+            \resumeItem{Allowing users to create their own fan curves with temperature nodes.}
+            \resumeItem{Toggle features with ease and load other users’ config files.}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
+          {\textbf{Photo Album App (Android)} $|$ \emph{Java, Maven, Git}}{Nov 2022 -- Dec 2022}
           \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
+            \resumeItem{Developed an Android app for creating and managing photo albums.}
+            \resumeItem{Implemented tagging functionality using SQLite database.}
+            \resumeItem{Utilized the Android framework for app design and development.}
+          \resumeItemListEnd
+     \resumeProjectHeading
+          {\textbf{Temperature Control Tool for Nvidia GPUs (Linux)} $|$ \emph{Nvidia-smi, Shell}}{Dec 2022 -- Jan 2023}
+          \resumeItemListStart
+            \resumeItem{Utilized bash and integrated Nvidia-smi for automatic temperature based fan control.}
+            \resumeItem{Created log feature to record temperature and fan speed.}
+            \resumeItem{Rerouted mandatory .csv output through a fake display into a text file.}
+          \resumeItemListEnd
+    \resumeProjectHeading
+          {\textbf{Media Management Desktop Application (Windows)} $|$ \emph{JavaFX, JSON}}{Oct 2022 -- Nov 2022}
+          \resumeItemListStart
+            \resumeItem{Developed a Windows desktop application utilizing JavaFX for the GUI.}
+            \resumeItem{Added features allowing for multiple users with individual properties using Java serialization. Included admin user to manage profiles.}
+            \resumeItem{Allowed for users to transfer copy items between albums by using an absolute path, ensuring no duplicates.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
 
 %
-%-----------PROGRAMMING SKILLS-----------
+%-----------PROGR0AMMING SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+     \textbf{Languages}{: Java, C, C++, x86 Assembly, Shell, Python, Ruby, SQL, HTML, CSS, AHK} \\
+     % \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
+     \textbf{Developer Tools}{: Git, Visual Studio, PyCharm,
+IntelliJ, Eclipse, MySQL Workbench, Android ADB, Svelte Kit, Vite, Linux environments, Microsoft Office, Adobe Suite} \\
+     % \textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
  \end{itemize}
 
