--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -117,7 +117,7 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Oways Jaffer} \\ \vspace{1pt}
+    \textbf{ \scshape Oways Jaffer} \\ \vspace{1pt}
     \small 201-418-0462 $|$ \href{mailto:realowaysjaffer@gmail.com}{\underline{realowaysjaffer@gmail.com}} $|$ 
     \href{https://linkedin.com/in/oways}{\underline{linkedin.com/in/owaysjaffer}} $|$
     \href{https://github.com/oway5}{\underline{github.com/Oway5}}
@@ -136,7 +136,7 @@
       {Dr. Ronald E. Mcnair Academic High School}{Jersey City, NJ}
       {Relevant Coursework: AP CSA, Introduction to Web Design}{Aug. 2018 -- June 2021}
       \resumeSubheadingCoursework
-      {GPA: 3.7}
+      {GPA: 3.7 / 4}
     
   \resumeSubHeadingListEnd
 
@@ -186,7 +186,17 @@
     %   \resumeItemListEnd
 
   \resumeSubHeadingListEnd
-
+%-----------PROGR0AMMING SKILLS-----------
+\section{Technical Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Languages}{: Java, C, C++, x86 Assembly, Shell, Python, Ruby, SQL, HTML, CSS, AHK} \\
+     % \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
+     \textbf{Developer Tools}{: React, Git, Android ADB, Svelte Kit, Vite, Linux environments, PyCharm,
+IntelliJ, Eclipse, MySQL Workbench, Microsoft Office, Adobe Suite} \\
+     % \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+    }}
+ \end{itemize}
 
 %-----------PROJECTS-----------
 \section{Projects}
@@ -194,15 +204,15 @@
       \resumeProjectHeading
           {\textbf{ArchOC (Linux)} $|$ \emph{Shell, Bash, JavaScript, SvelteKit}}{Mar 2023 -- Present}
           \resumeItemListStart
-            \resumeItem{Using SvelteKit to make a GUI}
-            \resumeItem{Enabling users to modify voltage offsets on their hardware without the need for a terminal. Hardware includes CPU and GPU for now}
-            \resumeItem{Allowing users to create their own fan curves with temperature nodes.}
+            \resumeItem{Using SvelteKit to make a GUI and have pages load instantaneously, making UI feel faster}
+            \resumeItem{Enabling users to modify voltage offsets on their hardware without the need for a terminal by using shell commands. Hardware includes CPU and GPU for now.}
+            \resumeItem{Allowing users to create their own fan curves with temperature nodes using JSON Objects.}
             \resumeItem{Toggle features with ease and load other users’ config files.}
           \resumeItemListEnd
       \resumeProjectHeading
           {\textbf{Photo Album App (Android)} $|$ \emph{Java, Maven, Git}}{Nov 2022 -- Dec 2022}
           \resumeItemListStart
-            \resumeItem{Developed an Android app for creating and managing photo albums.}
+            \resumeItem{Developed an Android app with Android Studio for creating and managing photo albums.}
             \resumeItem{Implemented tagging functionality using SQLite database.}
             \resumeItem{Utilized the Android framework for app design and development.}
           \resumeItemListEnd
@@ -210,32 +220,22 @@
           {\textbf{Temperature Control Tool for Nvidia GPUs (Linux)} $|$ \emph{Nvidia-smi, Shell}}{Dec 2022 -- Jan 2023}
           \resumeItemListStart
             \resumeItem{Utilized bash and integrated Nvidia-smi for automatic temperature based fan control.}
-            \resumeItem{Created log feature to record temperature and fan speed.}
-            \resumeItem{Rerouted mandatory .csv output through a fake display into a text file.}
+            \resumeItem{Created log feature to record temperature and fan speed. This also essentially created a live variable for each of them.}
+            \resumeItem{Rerouted mandatory .csv output through a fake display into a text file to bypass smi requirements, ensuring a smooth experience.}
           \resumeItemListEnd
     \resumeProjectHeading
           {\textbf{Media Management Desktop Application (Windows)} $|$ \emph{JavaFX, JSON}}{Oct 2022 -- Nov 2022}
           \resumeItemListStart
             \resumeItem{Developed a Windows desktop application utilizing JavaFX for the GUI.}
             \resumeItem{Added features allowing for multiple users with individual properties using Java serialization. Included admin user to manage profiles.}
-            \resumeItem{Allowed for users to transfer copy items between albums by using an absolute path, ensuring no duplicates.}
+            \resumeItem{Allowed for users to transfer copy items between albums by using an absolute path and JSON objects, ensuring no duplicates.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
 
 %
-%-----------PROGR0AMMING SKILLS-----------
-\section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Java, C, C++, x86 Assembly, Shell, Python, Ruby, SQL, HTML, CSS, AHK} \\
-     % \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Visual Studio, PyCharm,
-IntelliJ, Eclipse, MySQL Workbench, Android ADB, Svelte Kit, Vite, Linux environments, Microsoft Office, Adobe Suite} \\
-     % \textbf{Libraries}{: pandas, NumPy, Matplotlib}
-    }}
- \end{itemize}
+
 
 
 %-------------------------------------------
