--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -111,11 +111,6 @@
 \begin{document}
 
 %----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
-
 \begin{center}
     \textbf{ \scshape Oways Jaffer} \\ \vspace{1pt}
     \small 201-418-0462 $|$ \href{mailto:realowaysjaffer@gmail.com}{\underline{realowaysjaffer@gmail.com}} $|$ 
@@ -135,8 +130,8 @@
       \resumeSubheading
       {Dr. Ronald E. Mcnair Academic High School}{Jersey City, NJ}
       {Relevant Coursework: AP CSA, Introduction to Web Design}{Aug. 2018 -- June 2021}
-      \resumeSubheadingCoursework
-      {GPA: 3.7 / 4}
+    % \resumeSubheadingCoursework
+      %{GPA: 3.7 / 4}
     
   \resumeSubHeadingListEnd
 
@@ -146,45 +141,21 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Software Engineer Intern}{May 2022 -- August 2022}
+      {Web Developer}{Oct 2023 -- Present}
+      {Rutgers University}{New Brunswick, NJ}
+      \resumeItemListStart
+        \resumeItem{Overseeing the project from start to finish. Developing complete logic. Ensuring a consistent and friendly user experience.}
+        \resumeItem{Communicated with researchers to ensure the feature set was coherent in scientific terms. Not allowing impossible combinations of Magnetic Point Groups and allowing for easy access to datasets for researchers to update as needed.}
+        %\resumeItem{}
+      \resumeItemListEnd
+      \resumeSubheading
+      {Software Engineer Intern}{May 2022 -- Aug 2022}
       {ExterNetworks}{Piscataway, NJ}
       \resumeItemListStart
-        \resumeItem{Used MySQL Workbench to manage given databases restructuring storage of sensitive information.}
-        \resumeItem{Enhanced multiple services using data from consumer reports.}
-        \resumeItem{Shadowed Senior Engineer and Penetration Tester learning to secure large networks.}
+        \resumeItem{Used MySQL Workbench to manage given databases, restructuring storage of user information while shadowing Software Engineer and Penetration Tester.}
+        \resumeItem{Enhanced multiple services by using data directly from consumer reports to troubleshoot issues.}
+        %\resumeItem{Shadowed Senior Engineer and Penetration Tester learning to secure large networks.}
       \resumeItemListEnd
-      
-% -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
-
-    % \resumeSubheading
-    %   {Information Technology Support Specialist}{Sep. 2018 -- Present}
-    %   {Southwestern University}{Georgetown, TX}
-    %   \resumeItemListStart
-    %     \resumeItem{Communicate with managers to set up campus computers used on campus}
-    %     \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-    %     \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-    % \resumeItemListEnd
-
-    % \resumeSubheading
-    %   {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-    %   {Southwestern University}{Georgetown, TX}
-    %   \resumeItemListStart
-    %     \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-    %     \resumeItem{Developed a game in Java to test the generated dungeons}
-    %     \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-    %     \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-    %     \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-    %     \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-    %   \resumeItemListEnd
-
   \resumeSubHeadingListEnd
 %-----------PROGR0AMMING SKILLS-----------
 \section{Technical Skills}
@@ -201,34 +172,35 @@ IntelliJ, Eclipse, MySQL Workbench, Microsoft Office, Adobe Suite} \\
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{ArchOC (Linux)} $|$ \emph{Shell, Bash, JavaScript, SvelteKit}}{Mar 2023 -- Present}
-          \resumeItemListStart
-            \resumeItem{Using SvelteKit to make a GUI and have pages load instantaneously, making UI feel faster}
-            \resumeItem{Enabling users to modify voltage offsets on their hardware without the need for a terminal by using shell commands. Hardware includes CPU and GPU for now.}
-            \resumeItem{Allowing users to create their own fan curves with temperature nodes using JSON Objects.}
-            \resumeItem{Toggle features with ease and load other users’ config files.}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Photo Album App (Android)} $|$ \emph{Java, Maven, Git}}{Nov 2022 -- Dec 2022}
-          \resumeItemListStart
-            \resumeItem{Developed an Android app with Android Studio for creating and managing photo albums.}
-            \resumeItem{Implemented tagging functionality using SQLite database.}
-            \resumeItem{Utilized the Android framework for app design and development.}
-          \resumeItemListEnd
+     % \resumeProjectHeading
+         % {\textbf{ArchOC (Linux)} $|$ \emph{Shell, Bash, JavaScript, SvelteKit}}{Mar 2023 -- Present}
+          %\resumeItemListStart
+          %  \resumeItem{Using SvelteKit to make a GUI and have pages load instantaneously, making UI feel faster}
+          %  \resumeItem{Enabling users to modify voltage offsets on their hardware without the need for a terminal by using shell commands. Hardware includes CPU and GPU for now.}
+          %  \resumeItem{Allowing users to create their own fan curves with temperature nodes using JSON Objects.}
+           % \resumeItem{Toggle features with ease and load other users’ config files.}
+         % \resumeItemListEnd
+
      \resumeProjectHeading
           {\textbf{Temperature Control Tool for Nvidia GPUs (Linux)} $|$ \emph{Nvidia-smi, Shell}}{Dec 2022 -- Jan 2023}
           \resumeItemListStart
             \resumeItem{Utilized bash and integrated Nvidia-smi for automatic temperature based fan control.}
-            \resumeItem{Created log feature to record temperature and fan speed. This also essentially created a live variable for each of them.}
+            \resumeItem{Created log feature to record temperature and fan speed. This also essentially created a live variable for each fan, opening up the possibility of other features in the future.}
             \resumeItem{Rerouted mandatory .csv output through a fake display into a text file to bypass smi requirements, ensuring a smooth experience.}
+          \resumeItemListEnd
+    \resumeProjectHeading
+          {\textbf{Photo Album App (Android)} $|$ \emph{Java, Maven, Git}}{Nov 2022 -- Dec 2022}
+          \resumeItemListStart
+            \resumeItem{Developed an Android app with Android Studio for creating and managing photo albums.}
+            \resumeItem{Implemented tagging functionality using SQLite database.}
+            \resumeItem{Utilized the Android framework along with Maven for app design and development.}
           \resumeItemListEnd
     \resumeProjectHeading
           {\textbf{Media Management Desktop Application (Windows)} $|$ \emph{JavaFX, JSON}}{Oct 2022 -- Nov 2022}
           \resumeItemListStart
             \resumeItem{Developed a Windows desktop application utilizing JavaFX for the GUI.}
             \resumeItem{Added features allowing for multiple users with individual properties using Java serialization. Included admin user to manage profiles.}
-            \resumeItem{Allowed for users to transfer copy items between albums by using an absolute path and JSON objects, ensuring no duplicates.}
+            \resumeItem{Allowed users to transfer copy items between albums by using an absolute path and JSON objects, ensuring no duplicates.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
