reworded current job specs

--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -127,9 +127,9 @@
       {Bachelor of Sciences in Computer Science}{Aug. 2021 -- May 2025}
       \resumeSubheadingCoursework
       {Relevant Coursework: Software Methodology, Computer Architecture, Systems Programming}
-      \resumeSubheading
-      {Dr. Ronald E. Mcnair Academic High School}{Jersey City, NJ}
-      {Relevant Coursework: AP CSA, Introduction to Web Design}{Aug. 2018 -- June 2021}
+      %\resumeSubheading
+      %{Dr. Ronald E. Mcnair Academic High School}{Jersey City, NJ}
+      %{Relevant Coursework: AP CSA, Introduction to Web Design}{Aug. 2018 -- June 2021}
     % \resumeSubheadingCoursework
       %{GPA: 3.7 / 4}
     
@@ -144,8 +144,9 @@
       {Web Developer}{Oct 2023 -- Present}
       {Rutgers University}{New Brunswick, NJ}
       \resumeItemListStart
-        \resumeItem{Overseeing the project from start to finish. Developing complete logic. Ensuring a consistent and friendly user experience.}
-        \resumeItem{Communicated with researchers to ensure the feature set was coherent in scientific terms. Not allowing impossible combinations of Magnetic Point Groups and allowing for easy access to datasets for researchers to update as needed.}
+        \resumeItem{Spearheaded the end-to-end development and deployment of an educational web tool on an Ubuntu server using AWS, Apache, and JavaScript to ensure a seamless, user-friendly interface for the interactive exploration of magnetic point groups.}
+        \resumeItem{Collaborated with researchers to integrate scientifically accurate features, enabling robust data management and streamlined dataset updates, which significantly enhanced research accessibility and tool utility.}
+        %\resumeItem{Engineered a user-centric data management system, utilizing AWS for scalable storage, to permit researchers to seamlessly update and maintain key datasets, enhancing the tool's functionality and academic relevance.}
         %\resumeItem{}
       \resumeItemListEnd
       \resumeSubheading
@@ -191,9 +192,9 @@ IntelliJ, Eclipse, MySQL Workbench, Microsoft Office, Adobe Suite} \\
     \resumeProjectHeading
           {\textbf{Photo Album App (Android)} $|$ \emph{Java, Maven, Git}}{Nov 2022 -- Dec 2022}
           \resumeItemListStart
-            \resumeItem{Developed an Android app with Android Studio for creating and managing photo albums.}
-            \resumeItem{Implemented tagging functionality using SQLite database.}
-            \resumeItem{Utilized the Android framework along with Maven for app design and development.}
+            \resumeItem{Designed and developed an Android application for organizing photo albums with Android Studio, leveraging the Android framework and Maven for streamlined app development.}
+            \resumeItem{Implemented an advanced tagging functionality using SQLite to offer users an intuitive way to manage and retrieve their photos effectively.}
+            %\resumeItem{Utilized the Android framework along with Maven for app design and development.}
           \resumeItemListEnd
     \resumeProjectHeading
           {\textbf{Media Management Desktop Application (Windows)} $|$ \emph{JavaFX, JSON}}{Oct 2022 -- Nov 2022}
