added current internship

--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -139,12 +139,18 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
-
+\resumeSubheading
+      {Software Developer Intern}{Jan 2024 -- Present}
+      {PVE-IDE}{New York, NY}
+      \resumeItemListStart
+        \resumeItem{Led the development and continuous enhancement of a vital internal tool, widely adopted by over 100 engineers, significantly improving the process of building inspection report generation. This involved rigorous bug identification and resolution, ensuring system reliability and user satisfaction.}
+        \resumeItem{Implemented features that dramatically increased the automation of report creation, achieving up to threefold efficiency improvements. Worked intimately with a variety of technologies, including MongoDB, HTMX, Flask, Django, and Jinja2, to deliver robust full-stack development solutions.}
+      \resumeItemListEnd
     \resumeSubheading
       {Web Developer}{Oct 2023 -- Present}
       {Rutgers University}{New Brunswick, NJ}
       \resumeItemListStart
-        \resumeItem{Spearheaded the end-to-end development and deployment of an educational web tool on an Ubuntu server using AWS, Apache, and JavaScript to ensure a seamless, user-friendly interface for the interactive exploration of magnetic point groups.}
+        \resumeItem{Spearheaded the end-to-end development and deployment of an educational web tool on an Ubuntu server using AWS, Apache, PHP, and JavaScript to ensure a seamless, user-friendly interface for the interactive exploration of magnetic point groups.}
         \resumeItem{Collaborated with researchers to integrate scientifically accurate features, enabling robust data management and streamlined dataset updates, which significantly enhanced research accessibility and tool utility.}
         %\resumeItem{Engineered a user-centric data management system, utilizing AWS for scalable storage, to permit researchers to seamlessly update and maintain key datasets, enhancing the tool's functionality and academic relevance.}
         %\resumeItem{}
@@ -189,20 +195,20 @@ IntelliJ, Eclipse, MySQL Workbench, Microsoft Office, Adobe Suite} \\
             \resumeItem{Created log feature to record temperature and fan speed. This also essentially created a live variable for each fan, opening up the possibility of other features in the future.}
             \resumeItem{Rerouted mandatory .csv output through a fake display into a text file to bypass smi requirements, ensuring a smooth experience.}
           \resumeItemListEnd
-    \resumeProjectHeading
-          {\textbf{Photo Album App (Android)} $|$ \emph{Java, Maven, Git}}{Nov 2022 -- Dec 2022}
-          \resumeItemListStart
-            \resumeItem{Designed and developed an Android application for organizing photo albums with Android Studio, leveraging the Android framework and Maven for streamlined app development.}
-            \resumeItem{Implemented an advanced tagging functionality using SQLite to offer users an intuitive way to manage and retrieve their photos effectively.}
+    %\resumeProjectHeading
+         % {\textbf{Photo Album App (Android)} $|$ \emph{Java, Maven, Git}}{Nov 2022 -- Dec 2022}
+          %\resumeItemListStart
+           % \resumeItem{Designed and developed an Android application for organizing photo albums with Android Studio, leveraging the Android framework and Maven for streamlined app development.}
+           % \resumeItem{Implemented an advanced tagging functionality using SQLite to offer users an intuitive way to manage and retrieve their photos effectively.}
             %\resumeItem{Utilized the Android framework along with Maven for app design and development.}
-          \resumeItemListEnd
-    \resumeProjectHeading
-          {\textbf{Media Management Desktop Application (Windows)} $|$ \emph{JavaFX, JSON}}{Oct 2022 -- Nov 2022}
-          \resumeItemListStart
-            \resumeItem{Developed a Windows desktop application utilizing JavaFX for the GUI.}
-            \resumeItem{Added features allowing for multiple users with individual properties using Java serialization. Included admin user to manage profiles.}
-            \resumeItem{Allowed users to transfer copy items between albums by using an absolute path and JSON objects, ensuring no duplicates.}
-          \resumeItemListEnd
+         % \resumeItemListEnd
+    %\resumeProjectHeading
+         % {\textbf{Media Management Desktop Application (Windows)} $|$ \emph{JavaFX, JSON}}{Oct 2022 -- Nov 2022}
+          %\resumeItemListStart
+           % \resumeItem{Developed a Windows desktop application utilizing JavaFX for the GUI.}
+           % \resumeItem{Added features allowing for multiple users with individual properties using Java serialization. Included admin user to manage profiles.}
+           % \resumeItem{Allowed users to transfer copy items between albums by using an absolute path and JSON objects, ensuring no duplicates.}
+        %  \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
