--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -63,7 +63,7 @@
 % Custom commands
 \newcommand{\resumeItem}[1]{
   \item\small{
-    {#1 \vspace{-2pt}}
+    {#1 \vspace{-4pt}}
   }
 }
 
@@ -124,9 +124,9 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Rutgers University}{New Brunswick, NJ}
-      {Bachelor of Sciences in Computer Science}{Aug. 2021 -- May 2025}
+      {Bachelor of Sciences in Computer Science}{Sep. 2021 -- Dec 2025}
       \resumeSubheadingCoursework
-      {Relevant Coursework: Software Methodology, Computer Architecture, Systems Programming}
+      {Relevant Coursework: Software Methodology, Deep Learning, Systems Programming}
       %\resumeSubheading
       %{Dr. Ronald E. Mcnair Academic High School}{Jersey City, NJ}
       %{Relevant Coursework: AP CSA, Introduction to Web Design}{Aug. 2018 -- June 2021}
@@ -143,24 +143,26 @@
       {Software Developer Intern}{Jan 2024 -- Present}
       {PVE-IDE}{New York, NY}
       \resumeItemListStart
-        \resumeItem{Led the development and continuous enhancement of a vital internal tool, widely adopted by over 100 engineers, significantly improving the process of building inspection report generation. This involved rigorous bug identification and resolution, ensuring system reliability and user satisfaction.}
-        \resumeItem{Implemented features that dramatically increased the automation of report creation, achieving up to threefold efficiency improvements. Worked intimately with a variety of technologies, including MongoDB, HTMX, Flask, Django, and Jinja2, to deliver robust full-stack development solutions.}
+        \resumeItem{Developed full-stack internal tool used to automate and streamline the creation of construction related reports by up to 50\% in Flask, Mongo, Django, HTMX, and Bootstrap. }
+        \resumeItem{Implemented repetition functionality by refactoring database management system, reducing template sizes by multiple fold.}
+        \resumeItem{Made responsible for various bug fixes, improving site reliably and ensuring a smooth user experience for over 100 engineers.}
       \resumeItemListEnd
     \resumeSubheading
       {Web Developer}{Oct 2023 -- Present}
       {Rutgers University}{New Brunswick, NJ}
       \resumeItemListStart
-        \resumeItem{Spearheaded the end-to-end development and deployment of an educational web tool on an Ubuntu server using AWS, Apache, PHP, and JavaScript to ensure a seamless, user-friendly interface for the interactive exploration of magnetic point groups.}
-        \resumeItem{Collaborated with researchers to integrate scientifically accurate features, enabling robust data management and streamlined dataset updates, which significantly enhanced research accessibility and tool utility.}
-        %\resumeItem{Engineered a user-centric data management system, utilizing AWS for scalable storage, to permit researchers to seamlessly update and maintain key datasets, enhancing the tool's functionality and academic relevance.}
-        %\resumeItem{}
+        \resumeItem{Led the development and deployment of an educational web tool for exploring magnetic point groups on an Ubuntu server using AWS, Apache, PHP, and JavaScript, resulting in a seamless, user-friendly interface.}
+        \resumeItem{Streamlined cumbersome manual calculations by ensuring all results are physically viable, and searchable within a database, greatly improving efficiency.}
+        \resumeItem{Collaborated with researchers to integrate scientifically accurate features, significantly enhancing data management and research accessibility.}
+
+        \resumeItem{The tool, available at kcqm.rutgers.edu, is a work in progress with future updates planned to incorporate HTMX and Svelte for better performance and fluidity.}
       \resumeItemListEnd
       \resumeSubheading
       {Software Engineer Intern}{May 2022 -- Aug 2022}
       {ExterNetworks}{Piscataway, NJ}
       \resumeItemListStart
         \resumeItem{Used MySQL Workbench to manage given databases, restructuring storage of user information while shadowing Software Engineer and Penetration Tester.}
-        \resumeItem{Enhanced multiple services by using data directly from consumer reports to troubleshoot issues.}
+        \resumeItem{Enhanced multiple services by using data directly from consumer reports to troubleshoot issues while Shadowing a Senior Software Engineer and Penetration Tester}
         %\resumeItem{Shadowed Senior Engineer and Penetration Tester learning to secure large networks.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
@@ -168,10 +170,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, C, C++, x86 Assembly, Shell, Python, Ruby, SQL, HTML, CSS, AHK} \\
+     \textbf{Languages}{: Java, C, C++, Bash, Python, JavaScript/TypeScript, Ruby, SQL, HTML.} \\
      % \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: React, Git, Android ADB, Svelte Kit, Vite, Linux environments, PyCharm,
-IntelliJ, Eclipse, MySQL Workbench, Microsoft Office, Adobe Suite} \\
+     \textbf{Developer Tools}{: React, AWS, Node.js, REST APIs, Mobile Development, express.js, Git, Android ADB, Svelte Kit, Vite, Linux environments, PyCharm, IntelliJ, MySQL Workbench.} \\
      % \textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
  \end{itemize}
@@ -191,9 +192,9 @@ IntelliJ, Eclipse, MySQL Workbench, Microsoft Office, Adobe Suite} \\
      \resumeProjectHeading
           {\textbf{Temperature Control Tool for Nvidia GPUs (Linux)} $|$ \emph{Nvidia-smi, Shell}}{Dec 2022 -- Jan 2023}
           \resumeItemListStart
-            \resumeItem{Utilized bash and integrated Nvidia-smi for automatic temperature based fan control.}
+            \resumeItem{Utilized bash and  Nvidia-smi for an automatic temperature based fan control system. The base drivers had horrible temperate regulation and so this program allowed used to fine-tune it.}
             \resumeItem{Created log feature to record temperature and fan speed. This also essentially created a live variable for each fan, opening up the possibility of other features in the future.}
-            \resumeItem{Rerouted mandatory .csv output through a fake display into a text file to bypass smi requirements, ensuring a smooth experience.}
+            \resumeItem{Rerouted mandatory .csv output through a fake display into a text file to bypass smi requirements, ensuring a smooth experience for the user.}
           \resumeItemListEnd
     %\resumeProjectHeading
          % {\textbf{Photo Album App (Android)} $|$ \emph{Java, Maven, Git}}{Nov 2022 -- Dec 2022}
