final product until ml project

--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -145,24 +145,24 @@
       \resumeItemListStart
         \resumeItem{Developed full-stack internal tool used to automate and streamline the creation of construction related reports by up to 50\% in Flask, Mongo, Django, HTMX, and Bootstrap. }
         \resumeItem{Implemented repetition functionality by refactoring database management system, reducing template sizes by multiple fold.}
-        \resumeItem{Made responsible for various bug fixes, improving site reliably and ensuring a smooth user experience for over 100 engineers.}
+        \resumeItem{Made responsible for improving site reliability and ensuring a smooth user experience for 100+ engineers by fixing various bugs.}
       \resumeItemListEnd
     \resumeSubheading
       {Web Developer}{Oct 2023 -- Present}
       {Rutgers University}{New Brunswick, NJ}
       \resumeItemListStart
         \resumeItem{Led the development and deployment of an educational web tool for exploring magnetic point groups on an Ubuntu server using AWS, Apache, PHP, and JavaScript, resulting in a seamless, user-friendly interface.}
-        \resumeItem{Streamlined cumbersome manual calculations by ensuring all results are physically viable, and searchable within a database, greatly improving efficiency.}
+        \resumeItem{Streamlined cumbersome manual calculations by ensuring all results are physically viable and searchable within a database, greatly improving efficiency.}
         \resumeItem{Collaborated with researchers to integrate scientifically accurate features, significantly enhancing data management and research accessibility.}
 
-        \resumeItem{The tool, available at kcqm.rutgers.edu, is a work in progress with future updates planned to incorporate HTMX and Svelte for better performance and fluidity.}
+        \resumeItem{The tool, available at kcqm.rutgers.edu, is a work in progress with future updates architected to integrate HTMX and Svelte for better performance and fluidity.}
       \resumeItemListEnd
       \resumeSubheading
       {Software Engineer Intern}{May 2022 -- Aug 2022}
       {ExterNetworks}{Piscataway, NJ}
       \resumeItemListStart
         \resumeItem{Used MySQL Workbench to manage given databases, restructuring storage of user information while shadowing Software Engineer and Penetration Tester.}
-        \resumeItem{Enhanced multiple services by using data directly from consumer reports to troubleshoot issues while Shadowing a Senior Software Engineer and Penetration Tester}
+        \resumeItem{Enhanced multiple services by using data directly from consumer reports to troubleshoot issues.}
         %\resumeItem{Shadowed Senior Engineer and Penetration Tester learning to secure large networks.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
@@ -192,8 +192,8 @@
      \resumeProjectHeading
           {\textbf{Temperature Control Tool for Nvidia GPUs (Linux)} $|$ \emph{Nvidia-smi, Shell}}{Dec 2022 -- Jan 2023}
           \resumeItemListStart
-            \resumeItem{Utilized bash and  Nvidia-smi for an automatic temperature based fan control system. The base drivers had horrible temperate regulation and so this program allowed used to fine-tune it.}
-            \resumeItem{Created log feature to record temperature and fan speed. This also essentially created a live variable for each fan, opening up the possibility of other features in the future.}
+            \resumeItem{Utilized bash and  Nvidia-smi for an automatic temperature based fan control system. The base drivers had horrible temperate regulation and so this program allowed user to fine-tune it.}
+            \resumeItem{Created log feature to record temperature and fan speed in real time. This created live variables for each fan, opening up the possibility of other features in the future.}
             \resumeItem{Rerouted mandatory .csv output through a fake display into a text file to bypass smi requirements, ensuring a smooth experience for the user.}
           \resumeItemListEnd
     %\resumeProjectHeading
