--- a/Jaffer_Oways.tex
+++ b/Jaffer_Oways.tex
@@ -114,7 +114,7 @@
 \begin{center}
     \textbf{ \scshape Oways Jaffer} \\ \vspace{1pt}
     \small 201-418-0462 $|$ \href{mailto:realowaysjaffer@gmail.com}{\underline{realowaysjaffer@gmail.com}} $|$ 
-    \href{https://linkedin.com/in/oways}{\underline{linkedin.com/in/owaysjaffer}} $|$
+    \href{https://linkedin.com/in/owaysjaffer}{\underline{linkedin.com/in/owaysjaffer}} $|$
     \href{https://github.com/oway5}{\underline{github.com/Oway5}}
 \end{center}
 
@@ -124,7 +124,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Rutgers University}{New Brunswick, NJ}
-      {Bachelor of Sciences in Computer Science}{Sep. 2021 -- Dec 2025}
+      {Bachelor of Sciences in Computer Science \& Data Science}{Dec 2025}
       \resumeSubheadingCoursework
       {Relevant Coursework: Software Methodology, Deep Learning, Systems Programming}
       %\resumeSubheading
@@ -139,23 +139,24 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
-\resumeSubheading
-      {Software Developer Intern}{Jan 2024 -- Present}
-      {PVE-IDE}{New York, NY}
-      \resumeItemListStart
-        \resumeItem{Developed full-stack internal tool used to automate and streamline the creation of construction related reports by up to 50\% in Flask, Mongo, Django, HTMX, and Bootstrap. }
-        \resumeItem{Implemented repetition functionality by refactoring database management system, reducing template sizes by multiple fold.}
-        \resumeItem{Made responsible for improving site reliability and ensuring a smooth user experience for 100+ engineers by fixing various bugs.}
-      \resumeItemListEnd
     \resumeSubheading
       {Web Developer}{Oct 2023 -- Present}
-      {Rutgers University}{New Brunswick, NJ}
+      {Rutgers University - kcqm.rutgers.edu}{New Brunswick, NJ}
       \resumeItemListStart
-        \resumeItem{Led the development and deployment of an educational web tool for exploring magnetic point groups on an Ubuntu server using AWS, Apache, PHP, and JavaScript, resulting in a seamless, user-friendly interface.}
-        \resumeItem{Streamlined cumbersome manual calculations by ensuring all results are physically viable and searchable within a database, greatly improving efficiency.}
-        \resumeItem{Collaborated with researchers to integrate scientifically accurate features, significantly enhancing data management and research accessibility.}
-
-        \resumeItem{The tool, available at kcqm.rutgers.edu, is a work in progress with future updates architected to integrate HTMX and Svelte for better performance and fluidity.}
+        \resumeItem{Developed and Deployed a research-focused web tool for exploring magnetic point groups using AWS, Apache, PHP, and JavaScript.}
+        \resumeItem{Engineered a system to automate exploratory calculations, ensuring physical viability and database searchability, improving efficiency by up to 60\% }
+        \resumeItem{Collaborated with researchers to implement a reversed MPG search, increasing research accessibility across the whole department, and requiring 3x less compute.}
+        \resumeItem{Architected future updates for kcqm.rutgers.edu, incorporating HTMX and Svelte, with a projected 20\%-40\% reduction in load times to boost performance and fluidity.}
+      \resumeItemListEnd
+      \resumeSubheading
+      {Software Developer Intern}{Jan 2024 -- Sep 2024}
+      {PVE-EDI}{New York, NY}
+      \resumeItemListStart
+        \resumeItem{Developed full-stack internal tool used to automate and streamline the creation of construction-related reports by up to 50\% in Flask, Mongo, Django, HTMX, and Bootstrap. }
+        \resumeItem{Implemented variable clustering functionality by refactoring database management system, reducing template sizes by multiple fold.}
+        \resumeItem{Refactored document creation data pipeline to be more modular, enabling the creation of at least 4 distinct features.}
+        %IM HERE
+        \resumeItem{Improved site reliability by fixing 14 issues, ensuring 99.9\% uptime for 100+ engineers.}
       \resumeItemListEnd
       \resumeSubheading
       {Software Engineer Intern}{May 2022 -- Aug 2022}
@@ -193,7 +194,7 @@
           {\textbf{Temperature Control Tool for Nvidia GPUs (Linux)} $|$ \emph{Nvidia-smi, Shell}}{Dec 2022 -- Jan 2023}
           \resumeItemListStart
             \resumeItem{Utilized bash and  Nvidia-smi for an automatic temperature based fan control system. The base drivers had horrible temperate regulation and so this program allowed user to fine-tune it.}
-            \resumeItem{Created log feature to record temperature and fan speed in real time. This created live variables for each fan, opening up the possibility of other features in the future.}
+            \resumeItem{Created log feature to record temperature and fan speed in real time. This created live variables for each fan, opening up the possibility of extreme customization in the near future.}
             \resumeItem{Rerouted mandatory .csv output through a fake display into a text file to bypass smi requirements, ensuring a smooth experience for the user.}
           \resumeItemListEnd
     %\resumeProjectHeading
